# gamemstr-common

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: action.rs  creature.rs  item.rs  lib.rs  monster.rs  spell.rs  world.rs
src/action/: attack.rs
src/creature/: monster.rs
src/world/: campaign.rs  location.rs  map.rs  npc.rs
src/world/campaign/: player.rs  session.rs
