[package]
name = "gamemstr-common"
version = "0.2.0-alpha.1"
edition = "2021"
description = "Common code for the gamemstr project"
authors = ["James Wolff <james.wolff0@gmail.com>"]
homepage = "https://github.com/gamemstr/gamemstr-common"
repository = "https://github.com/gamemstr/gamemstr-common"
readme = "README.md"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-to-words = "0.1.0"
serde = { version = "1.0.155", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
